fix jquery :visible bugs; dynamic navbar logo

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -120,12 +120,9 @@ h1 {
   display: inline;
   font-size: 2em;
   display: inline-block;
+  margin-top: 15px;
   margin-left: .5em;
-  visibility: hidden;
-}
-
-#brand.needed {
-  visibility: visible;
+  display: none;
 }
 
 #brand i {
@@ -257,7 +254,21 @@ section.main {
     font-size: 4em;
   }
   #brand {
-    display: none;
+    font-size: 1em;
+  }
+  .brand-container {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    right: 0;
+    left: 0;
+    text-align: center;
   }
 }
 
+// override bs container md size
+@media (min-width: 768px) {
+  .container {
+    width: auto;
+  }
+}
